--- a/index.html
+++ b/index.html
@@ -83,33 +83,38 @@
         titleRow.appendChild(rating);
         card.appendChild(titleRow);
 
+        
+
         // Standalone label + pill
         const standaloneWrapper = document.createElement('div');
-        standaloneWrapper.className = 'mb-1 text-sm';
+standaloneWrapper.className = 'mb-1 text-sm';
 
-        const standaloneLabel = document.createElement('span');
-        standaloneLabel.textContent = 'Standalone: ';
-        standaloneLabel.className = 'text-white';
+const standaloneLabel = document.createElement('span');
+standaloneLabel.textContent = 'Standalone: ';
+standaloneLabel.className = 'text-white';
 
-        const yesSpan = document.createElement('span');
-        yesSpan.textContent = 'Yes';
-        yesSpan.className = mod.standalone
-  ? 'border border-white px-1 py-[1px] rounded-full text-xs inline-block'
+const yesSpan = document.createElement('span');
+yesSpan.textContent = 'Yes';
+yesSpan.className = mod.standalone
+  ? 'border border-white bg-yellow-400 bg-opacity-20 px-1 py-[1px] rounded-full text-xs inline-block text-white'
   : 'text-white text-xs';
 
-        const space = document.createTextNode(' ');
+const space = document.createTextNode(' ');
 
-        const noSpan = document.createElement('span');
-        noSpan.textContent = 'No';
-        noSpan.className = !mod.standalone
-  ? 'border border-white px-1 py-[1px] rounded-full text-xs inline-block'
+const noSpan = document.createElement('span');
+noSpan.textContent = 'No';
+noSpan.className = !mod.standalone
+  ? 'border border-white bg-yellow-400 bg-opacity-20 px-1 py-[1px] rounded-full text-xs inline-block text-white'
   : 'text-white text-xs';
 
-    standaloneWrapper.appendChild(standaloneLabel);
-    standaloneWrapper.appendChild(yesSpan);
-    standaloneWrapper.appendChild(space);
-    standaloneWrapper.appendChild(noSpan);
-    card.appendChild(standaloneWrapper);
+standaloneWrapper.appendChild(standaloneLabel);
+standaloneWrapper.appendChild(yesSpan);
+standaloneWrapper.appendChild(space);
+standaloneWrapper.appendChild(noSpan);
+card.appendChild(standaloneWrapper);
+
+
+        
 
 
         // Description
