--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
         standaloneDiv.innerHTML = 'Standalone: ';
 
         const yesSpan = document.createElement('span');
-        yesSpan.textContent = 'Yes';
+        yesSpan.textContent = 'yes';
         yesSpan.className = mod.standalone
           ? 'border border-white bg-yellow-400 bg-opacity-45 px-1 py-[1px] rounded-sm text-[9px] inline-block text-white ml-1'
           : 'text-white text-[9px] ml-1';
 
         const noSpan = document.createElement('span');
-        noSpan.textContent = 'No';
+        noSpan.textContent = 'no';
         noSpan.className = !mod.standalone
           ? 'border border-white bg-yellow-400 bg-opacity-45 px-1 py-[1px] rounded-sm text-[9px] inline-block text-white ml-1'
           : 'text-white text-[9px] ml-1';
