--- a/index.html
+++ b/index.html
@@ -88,15 +88,15 @@
         standaloneDiv.innerHTML = 'Standalone: ';
 
         const yesSpan = document.createElement('span');
-        yesSpan.textContent = 'yes';
+        yesSpan.textContent = 'Yes';
         yesSpan.className = mod.standalone
-          ? 'border border-white bg-yellow-400 bg-opacity-45 px-1 py-[1px] rounded-sm text-[9px] inline-block text-white ml-1'
+          ? 'border border-white bg-yellow-400 bg-opacity-45 px-1 py-[0.5px] rounded-sm text-[9px] inline-block text-white ml-1'
           : 'text-white text-[9px] ml-1';
 
         const noSpan = document.createElement('span');
-        noSpan.textContent = 'no';
+        noSpan.textContent = 'No';
         noSpan.className = !mod.standalone
-          ? 'border border-white bg-yellow-400 bg-opacity-45 px-1 py-[1px] rounded-sm text-[9px] inline-block text-white ml-1'
+          ? 'border border-white bg-yellow-400 bg-opacity-45 px-1 py-[0.5px] rounded-sm text-[9px] inline-block text-white ml-1'
           : 'text-white text-[9px] ml-1';
 
         standaloneDiv.appendChild(yesSpan);
