--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         platformDiv.className = 'text-xs text-white mb-1';
         platformDiv.innerHTML = 'Platform: ';
 
-        ['SoC', 'CS', 'CoP'].forEach(plat => {
+        ['Shadow of Chernobyl', 'Clear Sky', 'Call of Pripyat'].forEach(plat => {
           const span = document.createElement('span');
           span.textContent = plat;
           span.className = (mod.platform === plat)
